--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,4 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/menu_1"
+            android:title="pizza"
+            android:orderInCategory="0"/>
+        <item
+            android:id="@+id/menu_2"
+            android:title="hamburguesa"
+            android:orderInCategory="1"/>
+        <item
+            android:id="@+id/menu_3"
+            android:title="soda"
+            android:orderInCategory="2"/>
+        <item
+            android:id="@+id/menu_4"
+            android:title="papas"
+            android:orderInCategory="3"/>
+        <item
+            android:id="@+id/menu_5"
+            android:title="pie"
+            android:orderInCategory="4"/>
+    </group>
 </menu>
